crates/oxc_angular_compiler/tests/snapshots/integration_test__jit_service_decorator.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---
import { Service } from "@angular/core";
import { __decorate } from "tslib";
let CounterService = class CounterService {
	constructor(http) {
		this.http = http;
	}
	static ctorParameters = () => [{ type: HttpClient }];
};
CounterService = __decorate([Service()], CounterService);
export { CounterService };
