crates/oxc_angular_compiler/tests/snapshots/integration_test__jit_template_url.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
assertion_line: 6096
expression: result.code
---
import { Component } from "@angular/core";
import { __decorate } from "tslib";
import __NG_CLI_RESOURCE__0 from "angular:jit:template:file;./app.html";
let AppComponent = class AppComponent {};
AppComponent = __decorate([Component({
	selector: "app-root",
	template: __NG_CLI_RESOURCE__0,
	standalone: true
})], AppComponent);
export { AppComponent };
