crates/oxc_angular_compiler/tests/snapshots/integration_test__jit_union_type_ctor_params.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---
import { Component } from "@angular/core";
import { ServiceA } from "./a.service";
import { ServiceB } from "./b.service";
import { ServiceC } from "./c.service";
import { __decorate } from "tslib";
let TestComponent = class TestComponent {
	constructor(svcA, svcB, svcC) {}
	static ctorParameters = () => [
		null,
		null,
		{ type: ServiceC }
	];
};
TestComponent = __decorate([Component({
	selector: "test",
	template: ""
})], TestComponent);
export { TestComponent };
