crates/oxc_angular_compiler/tests/snapshots/integration_test__let_with_pipe_used_in_child_view.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Conditional_3_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵtext(0); }
  if ((rf & 2)) {
    i0.ɵɵnextContext();
    const value_r1 = i0.ɵɵreadContextLet(0);
    i0.ɵɵtextInterpolate1(" ",value_r1," ");
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵdeclareLet(0);
    i0.ɵɵpipe(1,"uppercase");
    i0.ɵɵtext(2," ");
    i0.ɵɵconditionalCreate(3,TestComponent_Conditional_3_Template,1,1);
  }
  if ((rf & 2)) {
    i0.ɵɵstoreLet(i0.ɵɵpipeBind1(1,1,ctx.name));
    i0.ɵɵadvance(3);
    i0.ɵɵconditional((true? 3: -1));
  }
}
