crates/oxc_angular_compiler/tests/snapshots/integration_test__let_with_pipe_used_in_listener.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r1 = i0.ɵɵgetCurrentView();
    i0.ɵɵdeclareLet(0);
    i0.ɵɵpipe(1,"uppercase");
    i0.ɵɵtext(2," ");
    i0.ɵɵelementStart(3,"button",0);
    i0.ɵɵlistener("click",function TestComponent_Template_button_click_3_listener() {
      i0.ɵɵrestoreView(_r1);
      const value_r2 = i0.ɵɵreadContextLet(0);
      return i0.ɵɵresetView(ctx.onClick(value_r2));
    });
    i0.ɵɵtext(4,"Click");
    i0.ɵɵelementEnd();
  }
  if ((rf & 2)) { i0.ɵɵstoreLet(i0.ɵɵpipeBind1(1,0,ctx.name)); }
}
